clusters/production/apps/dex-example-app-production/namespace-dex-example-app-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex-example-app-production
  labels:
    app.kubernetes.io/part-of: production
