clusters/production/apps/dex-example-app-production/dex-example-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-example-app
  namespace: dex-example-app-production
  labels:
    app.kubernetes.io/name: dex-example-app
spec:
  type: ClusterIP
  ports:
    - port: 5555
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: dex-example-app
