clusters/production/apps/dex-example-app-production/cilium-cluster-nodes-to-dex-example-http.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-nodes-to-dex-example-http
  namespace: dex-example-app-production
spec:
  endpointSelector:
    matchLabels:
      app: dex-example-app
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "5555"
        protocol: TCP
